--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ h1{
     font-size: 50px;
     font-family: 'Poppins', sans-serif;
 }
-h2{font-size: 40px;}
-.name-hilit{
+ 
+
+.orange-hilit{
     color: orange;
 }
 p{
@@ -15,18 +16,21 @@ p{
     width: 40%;
     float: left;
     margin-left: 5%;
-padding-left: 2%;
+
 }
 .half-width img{
     width: 100%;
 }
+
 .link-button{
+
     text-decoration: none;
     background-image: linear-gradient(45deg, yellow, red);
     padding: 10px 20px;
     border-radius: 30px;
     color: white;
     font-weight: 700px;
+    
 }
 .top-banner{
     background-image: url("images/1.png");
@@ -41,3 +45,55 @@ section{padding-bottom: 150px;
 .dream-area{background-image: url("images/dream-bg.png");
     background-repeat: no-repeat;
 background-position: right;}
+experience-area{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.orange{
+    color: orange;
+}
+.singal-experince{
+    box-shadow: 10px 10px 40px gray;
+ border-radius: 08px;
+ text-align: center;
+   
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,#ae00ff,green,yellow ) ;
+    
+
+     border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, red,greenyellow,blue) ;
+    
+
+     border-image-slice: 1;
+}
+.singal-experince{
+    height: 1000px;
+}
+
+.no-text{
+    color: white;
+    background-color: white;
+}
+footer p{
+    text-align: center;
+}
+.link{
+    text-align: center;
+    animation: reverse;
+    color: blue;
+    text-decoration: red;
+    
+}
+.link:hover{
+    color: red;
+}
